feat: folder and container improvements
